--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "n8n",
     "automation"
   ],
-  "license": "Apache-2.0",
+  "license": "MIT",
   "homepage": "https://github.com/shimmer-labs/n8n-nodes-podcast-data-extractor-taddy",
   "author": {
     "name": "Shimmer Labs",
