--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "n8n-nodes-podcast-data-extractor-taddy",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "Extract data from 4M+ podcasts via Taddy API - search shows, get episodes, extract transcripts for podcast analysis workflows",
   "keywords": [
     "n8n-community-node-package",
@@ -53,6 +53,7 @@
     "eslint-plugin-n8n-nodes-base": "^1.16.1",
     "n8n-workflow": "^1.0.0",
     "prettier": "^2.7.1",
+    "rimraf": "^6.0.1",
     "typescript": "^5.5.3"
   },
   "peerDependencies": {
