Update CI to copy icons after build

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,5 +22,10 @@ jobs:
       - name: Build
         run: npm run build
       
+      - name: Copy icons to dist
+        run: |
+          cp nodes/TaddyPodcast/*.svg dist/nodes/TaddyPodcast/ || true
+          cp nodes/TaddyPodcast/*.png dist/nodes/TaddyPodcast/ || true
+      
       - name: Check build output
         run: ls -la dist/nodes/TaddyPodcast/
